# playing-with-category-theory.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
category_theory/: applicative.hpp  category_theory.hpp  functor.hpp  isomorphism.hpp  monad.hpp
category_theory/constructions/: applicative.hpp  functor.hpp  isomorphism.hpp  monad.hpp
category_theory/stl/: functor.hpp
category_theory/utils/: functor.hpp  monad.hpp  utils.hpp
tests/: isomorphisms.cpp
